[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/line.gd" type="Script" id=1]
[ext_resource path="res://sprites/line.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 34.5439 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.9312, 36.1995 )

[node name="line" type="Node2D"]
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 1 )

[node name="line" type="Area2D" parent="."]
editor/display_folded = true
space_override = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="line"]
shape = SubResource( 1 )

[node name="collide" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 0, 10000 )

[node name="shape" type="CollisionShape2D" parent="collide"]
shape = SubResource( 2 )

[node name="sprite_long" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.496158, 0.496158 )
texture = ExtResource( 2 )

[node name="sprite_short" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.361801, 0.361801 )
texture = ExtResource( 2 )
[connection signal="input_event" from="line" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="line" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="line" to="." method="_on_Area2D_mouse_exited"]
